manifests/frontend/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: professional-web-frontend
  namespace: professional-web-frontend
